--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
 	defaultConfig {
 		applicationId "enterprises.mccollum.home.icing_legacy"
 		minSdkVersion 19
-		targetSdkVersion 22
+		targetSdkVersion 26
 		versionCode 1
-		versionName "1.0"
+		versionName "0.9-alpha1"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 		externalNativeBuild {
 			cmake {
@@ -31,12 +31,17 @@ android {
 			path "CMakeLists.txt"
 		}
 	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
 }
 
 dependencies {
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
 	implementation 'com.android.support:appcompat-v7:' + rootProject.supportLibVersion
 	implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+	implementation 'com.android.support:support-v4:26.1.0'
 	testImplementation 'junit:junit:4.12'
 	androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
 		exclude group: 'com.android.support', module: 'support-annotations'
@@ -48,4 +53,12 @@ dependencies {
 	annotationProcessor 'android.arch.lifecycle:compiler:' + rootProject.archLifecycleVersion
 	annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion
 	implementation 'com.android.support:design:' + rootProject.supportLibVersion
+
+	compile 'com.squareup.retrofit2:retrofit:2.3.0' //retrofit library, current as of September 21, 2017
+	compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+	compile 'com.android.volley:volley:1.0.0'
+
+	compile 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
+	annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
 }
