--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,11 @@ dependencies {
 	annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion
 	implementation 'com.android.support:design:' + rootProject.supportLibVersion
 
-	compile 'com.squareup.retrofit2:retrofit:2.3.0' //retrofit library, current as of September 21, 2017
-	compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+	implementation 'com.squareup.retrofit2:retrofit:2.3.0' //retrofit library, current as of September 21, 2017
+	implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-	compile 'com.android.volley:volley:1.0.0'
+	implementation 'com.android.volley:volley:1.0.0'
 
-	compile 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
+	implementation 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
 	annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
 }
