sm - add schema generation for room

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
 				cppFlags ""
 			}
 		}
+
+		javaCompileOptions {
+			annotationProcessorOptions {
+				arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+			}
+		}
 	}
 	buildTypes {
 		release {
