--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
 dependencies {
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
 	implementation 'com.android.support:appcompat-v7:' + rootProject.supportLibVersion
+	implementation 'com.android.support:cardview-v7:' + rootProject.supportLibVersion
 	implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 	implementation 'com.android.support:support-v4:26.1.0'
 	implementation 'com.android.support:support-core-utils:' + rootProject.supportLibVersion
